# dplom

./: README.md
app/: CMakeLists.txt
app/configs/: config.txt
app/resources/: resources.qrc
app/resources/images/: desktop.ini
app/resources/styles/: style.qss
app/src/: appdata.h  converter.cpp  converter.h  main.cpp  mainwindow.cpp  mainwindow.h  serverrequester.cpp  serverrequester.h  sessionsmanager.cpp  sessionsmanager.h  utils.cpp  utils.h
app/src/ui/: line.cpp  line.h  playstopbtn.cpp  playstopbtn.h  roundbtn.cpp  roundbtn.h  showhidebtn.cpp  showhidebtn.h  skipbtn.cpp  skipbtn.h  slicedbtn.cpp  slicedbtn.h  sliderstyle.cpp  sliderstyle.h  traplabel.cpp  traplabel.h
app/translations/: en.ts  ru.ts
server/configs/: config.txt
server/resources/images/: lol.txt
server/src/: client.c  client.h  get_add_krit_req.txt  main.c  main.h  utils.h
